# swagger/definitions/swagger.yml
@@ -669,6 +669,35 @@ paths:
             application/json:
               schema:
                 $ref: "#components/responses/Forbidden"
+  /users/admins:
+    get:
+      tags:
+        - Users
+      summary: List Admins
+      description: List Admins
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List Admins.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#components/schemas/User"
+        '401':
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Unauthorized"
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Forbidden"
   /users/byIds/{ids}:
     get:
       tags:
